--- a/css/main.css
+++ b/css/main.css
@@ -1544,7 +1544,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #75ff8a;
+  background: #3038db;
 }
 .sidebar-nav {
   margin: 0 0 20px;
